--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -52,7 +52,7 @@ body
 	height: auto
 
 header
-	background-image: url(/img/top_bg.png)
+	background-image: url(../img/top_bg.png)
 	height: 100vh
 	background-repeat: no-repeat
 	background-size: cover
@@ -132,14 +132,14 @@ header
 		margin: 0
 
 .c-desktop
-	background-image: url(/img/bg_green.png)
+	background-image: url(../img/bg_green.png)
 	padding: 70px 0
 	color: #fff
 	h1
 		font-size: 39px
 		text-align: center
 	.small-desk
-		background-image: url(/img/Shadow1.png)
+		background-image: url(../img/Shadow1.png)
 		background-repeat: no-repeat
 		background-position: 160px 0
 		margin-bottom: 150px
@@ -152,7 +152,7 @@ header
 			margin: 0 auto
 			margin-bottom: 30px
 	.big-desk
-		background-image: url(/img/Shadow2.png)
+		background-image: url(../img/Shadow2.png)
 		background-repeat: no-repeat
 		background-position: -215px 0
 		margin-top: 150px
@@ -178,7 +178,7 @@ header
 			margin-top: 50px
 
 .c-maping
-	background-image: url(/img/map_bg.png)
+	background-image: url(../img/map_bg.png)
 	padding-top: 150px
 	padding-bottom: 60px
 	.c-form
